--- a/src/components/MobileNavigation/mobilenavigation.css
+++ b/src/components/MobileNavigation/mobilenavigation.css
@@ -34,6 +34,7 @@
 	font-size: 1.5em;
 	padding: 15px;
 	cursor: pointer;
+	text-align: right;
 }
 
 .mobile--navigation--sidebar--header {
@@ -94,4 +95,10 @@
 	width: 80%;
 	margin: 0;
 	font-family: Montserrat, sans-serif;
+}
+
+@media (max-width: 400px) {
+	p.mobile--navigation--sidebar--name {
+		font-size: 0.8em;
+	}
 }
